MFA Setup modal.

--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -79,6 +79,10 @@
                         <span class="label">NHS Number:</span>
                         <span class="value" id="id">Loading...</span>
                     </div>
+                    <div class="info-row">
+                        <span class="label">MFA status:</span>
+                        <span class="value" id="mfa">Loading...</span>
+                    </div>
                 </div>
             </div>
 
