Implement clinician registration and dashboard features, including form validation, patient management, and responsive design updates.

--- a/js/account/html/patient.html
+++ b/js/account/html/patient.html
@@ -32,6 +32,9 @@
         </div>
     </div>
     <br>
+    <div id="error-message" class="error-message">
+        <!-- Insert Error Message -->
+    </div>
     <br>
     <div class="ac_buttons">
         <div>
