--- a/js/account/html/practitioner.html
+++ b/js/account/html/practitioner.html
@@ -19,8 +19,15 @@
         </div>
     </div>
     <br>
+    <div id="error-message" class="error-message">
+        <!-- Insert Error Message -->
+    </div>
     <br>
     <div class="ac_buttons">
         <button title="login" class="button_gl" id="clinician-login">Login</button>
+    </div>
+    <br>
+    <div class="register-link">
+        <a href="#clinician-register" id="clinician-register" style="color: #3e7c2e; text-decoration: none;">Register as a new practitioner</a>
     </div>
 </div>
