Implement MFA setup functionality, including QR code generation and verification, and update related styles and scripts for enhanced user experience.

--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -156,5 +156,6 @@
     <script src="../../js/services/user/userInfo.js" type="text/javascript"></script>
     <script src="../../js/account/logout.js" type="text/javascript"></script>
     <script src="../../js/dashboard/patientDashboard.js" type="text/javascript"></script>
+    <script src="../../js/dashboard/mfa.js" type="text/javascript"></script>
 </body>
 </html>
