--- a/html/dashboard/clinician-dashboard.html
+++ b/html/dashboard/clinician-dashboard.html
@@ -98,7 +98,7 @@
                             </tr>
                         </thead>
                         <tbody id="patients-list">
-                            <!-- Will be populated by JavaScript -->
+                            <!-- Injected by JavaScript -->
                         </tbody>
                     </table>
                 </div>
@@ -112,20 +112,7 @@
                 </div>
                 <div class="card-content">
                     <div class="appointment-list" id="appointment-list">
-                        <div class="appointment-item">
-                            <div class="appointment-time">Today at 07:00 AM</div>
-                            <div class="appointment-details">
-                                <div class="patient-name">Ken Carson</div>
-                                <div class="appointment-type">General Check-up</div>
-                            </div>
-                        </div>
-                        <div class="appointment-item">
-                            <div class="appointment-time">Tuesday at 6:00 PM</div>
-                            <div class="appointment-details">
-                                <div class="patient-name">Eugene ben</div>
-                                <div class="appointment-type">General Check-up</div>
-                            </div>
-                        </div>
+                        <!-- Injected by JavaScript -->
                     </div>
                     <button class="view-all-btn">View All →</button>
                 </div>
