Add new patient button and update appointment modal styles for improved UX

--- a/html/dashboard/clinician-dashboard.html
+++ b/html/dashboard/clinician-dashboard.html
@@ -84,6 +84,7 @@
                         <div class="search-bar">
                             <input type="text" id="patient-search" placeholder="Search patients...">
                             <button class="filter-btn"><i class="fa fa-filter"></i> Filter</button>
+                            <button class="new-patient-btn new-btn-add">+ New Patient</button>
                         </div>
                     </div>
                 </div>
@@ -108,7 +109,7 @@
             <div class="dashboard-card appointments">
                 <div class="card-header">
                     <h2>Upcoming Appointments</h2>
-                    <button class="new-appointment-btn">+ New Appointment</button>
+                    <button class="new-appointment-btn new-btn-add">+ New Appointment</button>
                 </div>
                 <div class="card-content">
                     <div class="appointment-list" id="appointment-list">
