--- a/html/dashboard/clinician-dashboard.html
+++ b/html/dashboard/clinician-dashboard.html
@@ -80,20 +80,23 @@
                     <div class="header-left">
                         <h2>Patient Board</h2>
                     </div>
+                    <button class="new-patient-btn new-btn-add">+ New Patient</button>
                     <div class="header-right">
                         <div class="search-bar">
                             <input type="text" id="patient-search" placeholder="Search patients...">
                             <button class="filter-btn"><i class="fa fa-filter"></i> Filter</button>
-                            <button class="new-patient-btn new-btn-add">+ New Patient</button>
                         </div>
                     </div>
                 </div>
                 <div class="card-content">
+                    <div class="hide-content">
+                        <p>Unable to display patients. Please view on a larger screen.</p>
+                    </div>
                     <table class="patients-table">
                         <thead>
                             <tr>
                                 <th>Patient Name</th>
-                                <th>ID</th>
+                                <th>NHS ID</th>
                                 <th>Status</th>
                                 <th>Actions</th>
                             </tr>
