Add dynamic dashboard stats loading and update appointment display

--- a/html/dashboard/clinician-dashboard.html
+++ b/html/dashboard/clinician-dashboard.html
@@ -64,8 +64,8 @@
                         <div class="stat-value" id="pending-reports">69</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-label">Today's appointments</div>
-                        <div class="stat-value" id="today-appointments">69</div>
+                        <div class="stat-label">Appointments</div>
+                        <div class="stat-value" id="appointments">69</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Messages</div>
