Update clinician dashboard stats to initialize with zero values and enhance layout with new patient button in footer

--- a/html/dashboard/clinician-dashboard.html
+++ b/html/dashboard/clinician-dashboard.html
@@ -57,19 +57,19 @@
                 <div class="stats-grid">
                     <div class="stat-item">
                         <div class="stat-label">Today's patients</div>
-                        <div class="stat-value" id="today-patients">8</div>
+                        <div class="stat-value" id="today-patients">0</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Pending Reports</div>
-                        <div class="stat-value" id="pending-reports">69</div>
+                        <div class="stat-value" id="pending-reports">0</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Appointments</div>
-                        <div class="stat-value" id="appointments">69</div>
+                        <div class="stat-value" id="appointments">0</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Messages</div>
-                        <div class="stat-value" id="messages">15</div>
+                        <div class="stat-value" id="messages">0</div>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <div class="header-left">
                         <h2>Patient Board</h2>
                     </div>
-                    <button class="new-patient-btn new-btn-add">+ New Patient</button>
+                    
                     <div class="header-right">
                         <div class="search-bar">
                             <input type="text" id="patient-search" placeholder="Search patients...">
@@ -105,6 +105,9 @@
                             <!-- Injected by JavaScript -->
                         </tbody>
                     </table>
+                </div>
+                <div class="card-footer">
+                    <button class="new-patient-btn new-btn-add">+ New Patient</button>
                 </div>
             </div>
 
