Show appointments in the patient dashboard.

--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -148,6 +148,17 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Appointments -->
+            <div class="dashboard-card">
+                <div class="card-header">
+                    <i class="fa fa-calendar"></i>
+                    <h2>Appointments</h2>
+                </div>
+                <div class="card-content appointments">
+                    <p>No appointments</p>
+                </div>
+            </div>
         </div>
     </main>
 
