Enhance history modal: add date display and fix answer formatting

--- a/html/dashboard/history.html
+++ b/html/dashboard/history.html
@@ -74,9 +74,15 @@
                         <div class="result-value" id="modal-result">
                             <!-- Result will be populated by JavaScript -->
                         </div>
+                        <div class="result-date">
+                            <p id="modal-date">
+                                <span></span>
+                            </p>
+                        </div>
                     </div>
                     <div class="answers-section">
                         <h3>Your Answers</h3>
+                        <br>
                         <div id="modal-answers">
                             <!-- Answers will be populated by JavaScript -->
                         </div>
@@ -90,7 +96,7 @@
     </div>
 
     <script src="../../js/dashboard/history.js" type="text/javascript"></script>
-    <script src="../../js/dashboard/guardScript.js" type="text/javascript"></script>
+    <!-- <script src="../../js/dashboard/guardScript.js" type="text/javascript"></script> -->
     <script src="../../js/dashboard/navScript.js" type="text/javascript"></script>
     <script src="../../js/services/user/userInfo.js" type="text/javascript"></script>
     <script src="../../js/account/logout.js" type="text/javascript"></script>
