--- a/html/account/index.html
+++ b/html/account/index.html
@@ -142,6 +142,7 @@
                      </ul>
                 </div>
             </div>
+            <div id="google_translate_element" style="margin-top: 10px;"></div>
         </div>
     </footer>
     <!-- // -->
@@ -150,5 +151,11 @@
     <!-- ? Scripts ? -->
     <script src="../../js/account/toLoginPage.js"></script>
     <script src="../../js/dashboard/mfa.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <!-- // -->
 </body>
