--- a/html/dashboard/egfr-options.html
+++ b/html/dashboard/egfr-options.html
@@ -39,6 +39,7 @@
                     </div>
                     <div>
                         <a class="logout" href="logout.html"><i class="fa fa-sign-out"></i> Logout</a>
+                        <div id="google_translate_element" style="margin-top: 10px;"></div>
                     </div>
                 </div>
             </div>
@@ -97,5 +98,11 @@
     <script src="../../js/services/user/userInfo.js"></script>
     <script src="../../js/account/logout.js"></script>
     <script src="../../js/dashboard/egfrOptions.js"></script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
