--- a/html/dashboard/history.html
+++ b/html/dashboard/history.html
@@ -27,7 +27,7 @@
             <div class="container-fluid">
                 <div class="space-out">
                     <div class="flexNav">
-                        <a class="nav-logo" href="../dashboard/home-dashboard.html" title="Home">
+                        <a class="nav-logo" href="../dashboard/patient-dashboard.html" title="Home">
                             <div class="header-logo"></div>
                         </a>
                         <ul class="nav navbar-nav">
@@ -39,6 +39,8 @@
                     </div>
                     <div>
                         <a class="logout" href="logout.html"><i class="fa fa-sign-out"></i> Logout</a>
+                        <!-- Google Translate widget -->
+                        <div id="google_translate_element" style="margin-top: 10px;"></div>
                     </div>
                 </div>
             </div>
@@ -100,5 +102,12 @@
     <script src="../../js/dashboard/navScript.js" type="text/javascript"></script>
     <script src="../../js/services/user/userInfo.js" type="text/javascript"></script>
     <script src="../../js/account/logout.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
