--- a/html/dashboard/patient-dashboard.html
+++ b/html/dashboard/patient-dashboard.html
@@ -40,6 +40,8 @@
                     </div>
                     <div>
                         <a class="logout" href="logout.html"><i class="fa fa-sign-out"></i> Logout</a>
+                        <!-- Google Translate widget -->
+                        <div id="google_translate_element" style="margin-top: 10px;"></div>
                     </div>
                 </div>
             </div>
@@ -168,5 +170,11 @@
     <script src="../../js/account/logout.js" type="text/javascript"></script>
     <script src="../../js/dashboard/patientDashboard.js" type="text/javascript"></script>
     <script src="../../js/dashboard/mfa.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
