--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -200,6 +200,7 @@
                     </ul>
                 </div>
             </div>
+            <div id="google_translate_element" style="margin-top: 10px;"></div>
         </div>
     </footer>
     <!-- // -->
@@ -212,5 +213,11 @@
     <script type="module" src="../../../js/services/calc/marker.js"></script>
     <script type="module" src="../../../js/services/calc/saveAnswers.js"></script>
     <script src="../../../js/services/calc/scrollTo.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <!-- // -->
 </body>
