--- a/html/account/index.html
+++ b/html/account/index.html
@@ -142,7 +142,7 @@
                      </ul>
                 </div>
             </div>
-            <div id="google_translate_element" style="margin-top: 10px;"></div>
+            <div id="google_translate_element" class="translate-element"></div>
         </div>
     </footer>
     <!-- // -->
@@ -156,6 +156,6 @@
             new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
         }
     </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <!-- // -->
 </body>
