--- a/html/dashboard/history.html
+++ b/html/dashboard/history.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>View History</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="../../images/favicon/favicon.ico">
@@ -40,7 +41,7 @@
                     <div>
                         <a class="logout" href="logout.html"><i class="fa fa-sign-out"></i> Logout</a>
                         <!-- Google Translate widget -->
-                        <div id="google_translate_element" style="margin-top: 10px;"></div>
+                        <div id="google_translate_element" class="translate-element"></div>
                     </div>
                 </div>
             </div>
@@ -108,6 +109,6 @@
             new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
         }
     </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
