--- a/html/home/index.html
+++ b/html/home/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title id="title">Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="../../images/favicon/favicon.ico">
@@ -11,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
-<body style="background-color: #EFE3C2;">
+<body>
     <!-- // -->
     <!-- ? Navbar ? -->
     <header>
@@ -212,7 +215,7 @@
                     </ul>
                 </div>
             </div>
-            <div id="google_translate_element" style="margin-top: 10px;"></div>
+            <div id="google_translate_element" class="translate-element"></div>
         </div>
     </footer>
     <!-- // -->
@@ -224,5 +227,6 @@
             new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
         }
     </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
+</html>
