--- a/html/services/calc/index.html
+++ b/html/services/calc/index.html
@@ -166,7 +166,7 @@
                 <div class="col-xs-6 col-md-3">
                     <h6>Categories</h6>
                     <ul class="footer-links">
-                        <li><a href="#">eGFR Calculator</a></li>
+                        <li><a href="../../../html/services/calc/index.html">eGFR Calculator</a></li>
                         <li><a href="#">Much MORE!</a></li>
                     </ul>
                 </div>
@@ -175,10 +175,9 @@
                     <h6>Quick Links</h6>
                     <ul class="footer-links">
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Contribute?</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Sitemap</a></li>
+                        <li><a href="../../../html/home/contact.html">Contact Us</a></li>
+                        <li><a href="https://github.com/JayNightmare/SDP-Website">Contribute?</a></li>
+                        <li><a href="https://nexusgit.info/pages/info/PP/pp">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
@@ -187,8 +186,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2024 All Rights Reserved by
-                        <a href="#">eGFR Calculator</a>.
+                    <p class="copyright-text">Copyright &copy; 2025 All Rights Reserved by
+                        <a href="https://github.com/JayNightmare/SDP-Website/blob/main/README.md#repo-owned-by" target="_blank" rel="noopener noreferrer">CKD Helper</a>.
                     </p>
                 </div>
     
