--- a/html/dashboard/egfr-options.html
+++ b/html/dashboard/egfr-options.html
@@ -70,6 +70,14 @@
                         </label>
                         <div id="file-name" class="file-name"></div>
                     </div>
+                    <div id="patient-selection" class="patient-selection" style="display:none">
+                        <h3>Select Patient</h3>
+                        <div class="form-group">
+                            <select id="patient-dropdown" class="form-control" required>
+                                <option value="">Choose a patient...</option>
+                            </select>
+                        </div>
+                    </div>
                     <div id="missing-fields" class="missing-fields">
                         <h3>Missing Required Fields</h3>
                         <form id="missing-fields-form">
@@ -86,6 +94,10 @@
                 </div>
                 <div class="card-content">
                     <table id="results-table"></table>
+                    <button id="submit-results" class="action-button" style="display:none; margin-top: 20px;">
+                        <i class="fa fa-save"></i>
+                        Submit Results
+                    </button>
                 </div>
             </div>
 
