--- a/html/dashboard/egfr-options.html
+++ b/html/dashboard/egfr-options.html
@@ -29,11 +29,12 @@
             <div class="container-fluid">
                 <div class="space-out">
                     <div class="flexNav">
-                        <a class="nav-logo" href="../dashboard/patient-dashboard.html" title="Home">
+                        <a class="nav-logo" href="#" title="Home" onclick="redirectToDashboard()">
                             <div class="header-logo"></div>
                         </a>
+                        
                         <ul class="nav navbar-nav">
-                            <li><a href="../dashboard/patient-dashboard.html"><i class="fa fa-home"></i> Home</a></li>
+                            <li><a href="#" title="Home" onclick="redirectToDashboard()"><i class="fa fa-home"></i> Home</a></li>
                             <li class="active"><a href="egfr-options.html"><i class="fa fa-calculator"></i> eGFR Calculator</a></li>
                             <li><a href="about.html"><i class="fa fa-info-circle"></i> About</a></li>
                             <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
@@ -45,6 +46,18 @@
                     </div>
                 </div>
             </div>
+            <script>
+                function redirectToDashboard() {
+                    const userType = localStorage.getItem('userType'); // Assuming userType is stored in localStorage
+                    if (userType === 'patient') {
+                        window.location.href = '../dashboard/patient-dashboard.html';
+                    } else if (userType === 'clinician') {
+                        window.location.href = '../dashboard/clinician-dashboard.html';
+                    } else {
+                        alert('User type not recognized.');
+                    }
+                }
+            </script>
         </nav>
     </aside>
 
