Updates dashboards and metadata; revises licensing
Simplifies clinician dashboard layout by removing redundant elements. Adjusts patient dashboard UI by removing unused action button. Enhances index.html with responsive metadata for improved accessibility. Updates project version and license information in package files, expanding keywords for better discoverability.

No issue reference provided.

--- a/html/dashboard/clinician-dashboard.html
+++ b/html/dashboard/clinician-dashboard.html
@@ -60,12 +60,8 @@
             <div class="dashboard-card stats-overview">
                 <div class="stats-grid">
                     <div class="stat-item">
-                        <div class="stat-label">Today's patients</div>
+                        <div class="stat-label">Patients</div>
                         <div class="stat-value" id="today-patients">0</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-label">Pending Reports</div>
-                        <div class="stat-value" id="pending-reports">0</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Appointments</div>
@@ -73,7 +69,7 @@
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Messages</div>
-                        <div class="stat-value" id="messages">0</div>
+                        <div class="stat-value" id="messages">2</div>
                     </div>
                 </div>
             </div>
